--- a/package.json
+++ b/package.json
@@ -1,16 +1,48 @@
 {
-  "name": "@@nx-clj/nx-clj/source",
+  "name": "@nx-clj/nx-clj/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@nx/eslint-plugin": "16.2.2",
+    "@nx/jest": "16.2.2",
     "@nx/js": "16.2.2",
+    "@nx/linter": "16.2.2",
+    "@nx/plugin": "^16.2.2",
+    "@nx/vite": "16.2.2",
     "@nx/workspace": "16.2.2",
+    "@swc-node/register": "~1.4.2",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
+    "@types/jest": "^29.4.0",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/ui": "^0.31.0",
+    "edn-data": "^1.0.0",
+    "eslint": "~8.15.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "^29.4.1",
+    "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "~20.0.3",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "16.2.2",
     "nx-cloud": "latest",
     "prettier": "^2.6.2",
-    "typescript": "~5.0.2"
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.0.2",
+    "vite": "^4.3.4",
+    "vite-plugin-dts": "~1.7.1",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-tsconfig-paths": "^4.0.2",
+    "vitest": "^0.31.0"
+  },
+  "dependencies": {
+    "@nx/devkit": "16.2.2",
+    "@swc/helpers": "~0.5.0",
+    "tslib": "^2.3.0"
   }
 }
