--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,7 +11,6 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - uses: nrwl/nx-set-shas@v3
       - uses: actions/setup-node@v3
         with:
           node-version-file: .nvmrc
@@ -19,4 +18,4 @@ jobs:
       - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - run: npm ci
       - run: npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_ACCESS_TOKEN }}
-      - run: npx nx affected -t publish --parallel=3 --version=$RELEASE_VERSION
+      - run: npx nx run-many -t publish --parallel=3 --version=$RELEASE_VERSION
