--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -18,4 +18,4 @@ jobs:
       - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - run: npm ci
       - run: npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_ACCESS_TOKEN }}
-      - run: npx nx run-many -t publish --parallel=3 --version=$RELEASE_VERSION
+      - run: npx nx run-many -t publish --parallel=3 --ver=$RELEASE_VERSION --tag=latest
