very basic init generator

--- a/packages/nx-clj/package.json
+++ b/packages/nx-clj/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@nx-clj/nx-clj",
   "version": "0.0.1",
-  "type": "commonjs"
+  "type": "commonjs",
+  "generators": "./generators.json"
 }
