--- a/packages/nx-clj/src/generators/package/files/deps.edn.template
+++ b/packages/nx-clj/src/generators/package/files/deps.edn.template
@@ -1,1 +1,3 @@
-{:deps {workspace-dependencies {:local/root "<%= depsProjDir %>"}}}
+{:deps {workspace-dependencies {:local/root "<%= depsProjDir %>"}}
+ :aliases {:build {:deps {workspace-build-dependencies {:local/root "<%= buildDepsProjDir %>"}}
+                   :ns-default build}}}
