--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@typescript-eslint/parser": "^5.58.0",
     "@vitest/coverage-c8": "^0.31.0",
     "@vitest/ui": "^0.31.0",
-    "edn-data": "^1.0.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "jest": "^29.4.1",
@@ -43,6 +42,7 @@
   "dependencies": {
     "@nx/devkit": "16.2.2",
     "@swc/helpers": "~0.5.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "edn-data": "^1.0.0"
   }
 }
