move nx-clj to tools-deps
Make it clearer that the plugin handles tools.deps projects

--- a/packages/tools-deps/package.json
+++ b/packages/tools-deps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nx-clj/nx-clj",
+  "name": "@nx-clj/tools-deps",
   "version": "0.0.1",
   "author": "Caio Oliveira",
   "license": "MIT",
