--- a/packages/tools-deps/project.json
+++ b/packages/tools-deps/project.json
@@ -1,35 +1,35 @@
 {
-  "name": "nx-clj",
+  "name": "tools-deps",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/nx-clj/src",
+  "sourceRoot": "packages/tools-deps/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nx/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/nx-clj",
-        "main": "packages/nx-clj/src/index.ts",
-        "tsConfig": "packages/nx-clj/tsconfig.lib.json",
+        "outputPath": "dist/packages/tools-deps",
+        "main": "packages/tools-deps/src/index.ts",
+        "tsConfig": "packages/tools-deps/tsconfig.lib.json",
         "assets": [
-          "packages/nx-clj/*.md",
+          "packages/tools-deps/*.md",
           {
-            "input": "./packages/nx-clj/src",
+            "input": "./packages/tools-deps/src",
             "glob": "**/!(*.ts)",
             "output": "./src"
           },
           {
-            "input": "./packages/nx-clj/src",
+            "input": "./packages/tools-deps/src",
             "glob": "**/*.d.ts",
             "output": "./src"
           },
           {
-            "input": "./packages/nx-clj",
+            "input": "./packages/tools-deps",
             "glob": "generators.json",
             "output": "."
           },
           {
-            "input": "./packages/nx-clj",
+            "input": "./packages/tools-deps",
             "glob": "executors.json",
             "output": "."
           }
@@ -41,9 +41,9 @@
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
-          "packages/nx-clj/**/*.ts",
-          "packages/nx-clj/package.json",
-          "packages/nx-clj/generators.json"
+          "packages/tools-deps/**/*.ts",
+          "packages/tools-deps/package.json",
+          "packages/tools-deps/generators.json"
         ]
       }
     },
@@ -51,7 +51,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "packages/nx-clj/jest.config.ts",
+        "jestConfig": "packages/tools-deps/jest.config.ts",
         "passWithNoTests": true
       },
       "configurations": {
